--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<div id="outer">
 		<div class="container">
-			<h1 id="title">RANDOM FOREST</h1>
+			<h1 class="heading" data-target-resolver>RANDOM FOREST</h1>
 
 			<div id="sections">
 				<a href="books.html"><h3 id="books">Books</h3></a>
