--- a/index.html
+++ b/index.html
@@ -3,25 +3,64 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/main.css">
-	<title>RANDOM-FOREST</title>
+
+	<script type="text/javascript" src="script.js"></script>
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" href="img/logo.png">
+
+	<title>random.forest</title>
 </head>
+
 <body>
-	<canvas id="canvas"></canvas>
-
-	<div id="outer">
+	<div class="header">
 		<div class="container">
-			<h1 class="heading" data-target-resolver></h1>
+			<h4><span class="color-back green-back">random.forest</span></h4>
+			<p id="motto">create, explore, expand, conquer.</p>
+		</div>
+	</div>
 
-			<div id="sections">
-				<a href="books.html"><h3 id="books">Books</h3></a>
-				<a href="useful_links.html"><h3 id="useful_links">Useful links</h3></a>
-				<a href="about_us.html"><h3 id="about_us">About US</h3></a>
-				<a href="contacts.html"><h3 id="contacts">Contacts</h3></a>
+	<div class="main">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<p>subjects:</p>
+				</div>
+				<div class="col-md-6">
+					<div class="subject">
+						<a href="math/math.html" class="animated-link-1 green-link-1">math ↦</a>
+					</div>
+					<div class="subject">
+						<a href="ml/ml.html" class="animated-link-1 red-link-1">machine learning ↦</a>
+					</div>
+					<div class="subject">
+						<a href="programming/programming.html" class="animated-link-1 blue-link-1">programming ↦</a>
+					</div>
+					<div class="subject">
+						<a href="life/life.html" class="animated-link-1 orange-link-1">life ↦</a>
+					</div>
+				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 
-	<script src="js/script.js"></script>
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<p>about us:</p>
+				</div>
+				<div class="col-md-6">
+					<div class="author">
+						<a href="authors/author-amurkhan.html"><span class="color-back blue-back">Amurkhan Dzagkoev ↦</span></a>
+					</div>
+					<div class="author">
+						<a href="#"><span class="color-back blue-back">Omar Zoloev ↦</span></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
