--- a/math/links/subjects/calculus-links.html
+++ b/math/links/subjects/calculus-links.html
@@ -6,7 +6,7 @@
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../../style.css">
-	<link rel="icon" href="../../../img/logo.png">
+	<link rel="icon" href="../../../img/LOGO.svg">
 
 	<title>calculus links</title>
 </head>
