--- a/math/math.html
+++ b/math/math.html
@@ -22,11 +22,11 @@
 		<div class="container">
 			<blockquote class="quote-card green-card">
 			    <p>
-		      		Именно математика даёт надёжнейшие правила: тому кто им следует — тому не опасен обман чувств.
+		      		Может быть величайшим триумфом человеческого гения является то, что человек может понять вещи, которые он уже не в силах вообразить
 			    </p>
 
 			    <cite>
-		      		- Леонард Эйлер
+		      		- Лев Давидович Ландау
 			    </cite>
 		  	</blockquote>
 
