--- a/math/books/subjects/school-algebra-books.html
+++ b/math/books/subjects/school-algebra-books.html
@@ -37,9 +37,24 @@
 
 					<!-- Название и ссылка -->
 					<td>
+						Алгебра (5-11 классы)
+
+						<a href="https://github.com/tsebaka/Science-Verse/tree/main/1.%20Математика/Школьная%20математика%20(5-11)/Алгебра">[pdf]</a>
+					</td>
+				</tr>
+				
+				<tr>
+					<!-- Строка -->
+					<th scope="row">1</th>
+
+					<!-- Автор -->
+					<td>Мерзляк А. Г.</td>
+
+					<!-- Название и ссылка -->
+					<td>
 						Алгебра и начала мат. анализа (11 класс)
 
-						<a href="https://github.com/tsebaka/Science-Verse/blob/main/1.%20Математика/Школьная%20математика%20(5-11)/Алгебра/11%20класс/Мерзляк%2011.pdf">[pdf]</a>
+						<a href="https://github.com/tsebaka/Science-Verse/tree/main/1.%20Математика/Школьная%20математика%20(5-11)/Алгебра">[pdf]</a>
 					</td>
 				</tr>
 				<!-- И до сюда -->
