--- a/ml/ml.html
+++ b/ml/ml.html
@@ -22,11 +22,11 @@
 		<div class="container">
 			<blockquote class="quote-card green-card">
 			    <p>
-		      		цитата про машинное обучение, типа это круто.
+		      		Ни человек, ни машина не могут заменить своего создателя.
 			    </p>
 
 			    <cite>
-		      		- Амур Дзагкоев
+		      		- Тапан Гхош
 			    </cite>
 		  	</blockquote>
 
