--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<p>about us:</p>
+					<p>about site:</p>
 				</div>
 				<div class="col-md-6">
 					<div class="author">
 						<a href="authors/author-amurkhan.html"><span class="color-back blue-back">Amurkhan Dzagkoev ↦</span></a>
 					</div>
 					<div class="author">
-						<a href="#"><span class="color-back blue-back">Omar Zoloev ↦</span></a>
+						<a >random.forest - сборка ресурсов которые помогали и помогают нам изучать этот мир, мы считаем что изучение это в первую очередь поиск знаний из разных источников</a>
 					</div>
 				</div>
 			</div>
